Fix overlapping intro text with new breakpoint

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,7 +60,7 @@ input {
 
 body {
   display: grid;
-  grid-template-columns: minmax(max-content, 20rem) minmax(785px, 1fr);
+  grid-template-columns: minmax(max-content, 20rem) minmax(830px, 1fr);
   grid-template-rows: 13rem 1fr;
   grid-template-areas:
     "nav header"
@@ -81,7 +81,7 @@ header {
     "header-top"
     "header-bottom";
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
 
   background: var(--clr-neutral-100);
   box-shadow: var(--box-shadow);
@@ -92,21 +92,31 @@ header {
 
     display: grid;
     grid-template-columns: 1fr repeat(3, max-content);
-    gap: 2.5vw;
+    gap: 2rem;
     align-items: center;
 
     .search-container {
       display: grid;
       align-items: center;
       grid-template-columns: max-content 1fr;
+
+      button {
+        background: none;
+      }
+
+      input[type="text"] {
+        width: clamp(16rem, 90%, 55rem);
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+        border-radius: 1rem;
+        margin: 1rem;
+
+        background: var(--clr-neutral-200);
+      }
     }
 
     svg {
       height: 2rem;
-    }
-
-    button {
-      background: none;
     }
 
     .notification-svg {
@@ -117,16 +127,6 @@ header {
       height: 3rem;
       aspect-ratio: 1/1;
       border-radius: 50%;
-    }
-
-    input[type="text"] {
-      width: clamp(16rem, 90%, 55rem);
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      border-radius: 1rem;
-      margin: 1rem;
-
-      background: var(--clr-neutral-200);
     }
 
     h2 {
@@ -140,7 +140,8 @@ header {
     grid-area: header-bottom;
 
     display: grid;
-    grid-template-columns: 4rem 1fr;
+    grid-template-columns: minmax(max-content, 1fr) 1fr;
+    gap: min(1rem, 5%);
     justify-content: space-between;
 
     .introduction-container {
@@ -152,9 +153,13 @@ header {
 
     h3 {
       align-self: end;
+      font-size: 1.1rem;
+      line-height: 1;
     }
     h2 {
       align-self: start;
+      font-size: 2rem;
+      line-height: 1;
     }
 
     img {
@@ -169,7 +174,7 @@ header {
       justify-self: end;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 1rem;
+      gap: 2vw;
 
       button {
         margin-block: 1rem;
@@ -209,7 +214,7 @@ nav {
 
   p {
     font-size: 1.25rem;
-    font-weight: 700;
+    font-weight: 400;
   }
 
   svg {
